# nh-grid-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  scenario.meta.yaml
crms/: common.py  feature.py  grid.py  patch.py  raster.py  solution.py  topo.py  tree.py  treeger.py
icrms/: icommon.py  ifeature.py  igrid.py  ipatch.py  iraster.py  isimulation.py  isolution.py  itopo.py  itree.py  itreeger.py
persistence/: process_group.json
persistence/helpers/: DemGeneration.py
persistence/render/interface/: terrainData.json  waterData.json
resource/grid/projects/测试/: meta.json
resource/grid/schemas/: test.json  全流程.json
scripts/: chat.py  common.crm.py  feature.crm.py  grid.crm.py  grid_crm_launcher.py  grid_mcp_server.py  patch.crm.py  raster.crm.py  solution.crm.py  topo.crm.py  treeger.crm.py
src/gridman/: main.py
src/gridman/api/: router.py
src/gridman/api/endpoints/: clever_grid.py  grid.py  project.py  project_meta.py  project_metas.py  schema.py  schemas.py  ui.py
src/gridman/compos/: grid_comp_old.py
src/gridman/core/: config.py  mcp_client.py  server.py  transform.py
src/gridman/schemas/: __init_.py  grid.py  project.py  schema.py
src/nh_grid_server/: main.py
src/nh_grid_server/api/: __init__.py
src/nh_grid_server/compos/: grid_comp.py  grid_comp_old.py
src/nh_grid_server/core/: .env.example  bootstrapping_treeger.py  config.py  mcp_client.py  server.py
src/nh_grid_server/schemas/: clever.py  common.py  crm.py  feature.py  grid.py  grids.py  patch.py  project.py  raster.py  scene.py  schema.py  simulation.py  solution.py
(+28 files in other folders)
