[project]
name = "nh-grid-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "c-two>=0.1.18",
    "fastapi>=0.115.12",
    "gdal>=3.10.3",
    "jinja2>=3.1.6",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "uvicorn>=0.34.2",
]
